Updated merchant center docs to include feed url

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ RewriteRule ^(.*)$ https://site.com/$1 [R=301,L]</code>
                                         <li>Admin > Property Settings > Search Console > Adjust Search Console > Link to the new Search Console account</li>
                                     </ul>
                                 </li>
-                                <li>Google Merchant Center (Shopping) - Requires claiming the new URL in Business information > Website > Claim your website</li>
+                                <li>Google Merchant Center (Shopping) - Requires claiming the new URL in Business information > Website > Claim your website. You may also want to update your feed URL if you use this method to regularly import your products. This is done in Products > Feeds > Select feed > Schedule > Edit Schedule > Update the File URL</li>
                                 <li>Google Adwords - Update any Ad URLs to use HTTPS</li>
                                 <li>Bing Webmaster Tools - Like with Google, you'll need to create a new account for the HTTPs version of your site</li>
                             </ul>
