Fixed missing rel="noopener" target="_blank" on link

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                             </p>
 
                             <p v-else-if="platform == 'rec'">
-                                For REC, please <a href="https://support.reallyeasycart.co.uk/support/tickets/new">contact support</a> for them to install the new certificate for you.
+                                For REC, please <a rel="noopener" target="_blank" href="https://support.reallyeasycart.co.uk/support/tickets/new">contact support</a> for them to install the new certificate for you.
                             </p>
 
                             <template v-else>
