Replaced buttons.github.io with ghbtns.com to avoid sidebar scrollbar bug

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <!-- product hunt, ref: https://www.yvoschaap.com/producthunt/button.html -->
                     <iframe src="https://yvoschaap.com/producthunt/counter.html#href=https%3A%2F%2Fwww.producthunt.com%2Fr%2F55d607e55028da%2F90301&layout=wide" width="100" height="22" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
 
-                    <!-- github, ref: https://buttons.github.io/ (script at bottom of file) -->
-                    <a class="github-button" href="https://github.com/MovingToHTTPS/movingtohttps.com" data-count-href="/MovingToHTTPS/movingtohttps.com/stargazers" data-count-api="/repos/MovingToHTTPS/movingtohttps.com#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star MovingToHTTPS/movingtohttps.com on GitHub">Star</a>
+                    <!-- github, ref: https://ghbtns.com/ -->
+                    <iframe src="https://ghbtns.com/github-btn.html?user=MovingToHTTPS&repo=movingtohttps.com&type=star&count=true" width="100" height="22" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
 
                 </div>
 
@@ -715,9 +715,6 @@ Header set Strict-Transport-Security "max-age=15768000;"
 
     <!-- AddThis sharing icons -->
     <script src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-587ff52da81ee382"></script>
-
-    <!-- Github buttons -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
 </body>
 </html>
