--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </li>
                         <li>
                             <h3>Make sure everyone involved in the site knows the migration is happening.</h3>
-                            <p>For example, if you're site has a separate marketing person or team, let them know what will be changing. Later on we'll be updating 3rd party links and they may need to be aware of the changes and make changes of their own.</p>
+                            <p>For example, if your site has a separate marketing person or team, let them know what will be changing. Later on we'll be updating 3rd party links and they may need to be aware of the changes and make changes of their own.</p>
                         </li>
                         <li>
                             <h3>How will you track changes?</h3>
