--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 
                 <div class="about-site block">
                     <p>A community site to help site owners migrate to HTTPS with a simple tested process. Allowing you to filter the plan based on multiple platforms (<a href="/?platform=wordpress">WordPress</a>, <a href="/?platform=magento">Magento</a>, and more), hosting environments (<a href="/?hosting=cpanel">cPanel</a>, <a href="/?hosting=apache">Apache</a>, and more) along with the level of control / access you have over the site.</p>
-                    <p>Are you migrating your site from HTTP to HTTPS?
+                    <p>Are you migrating your site from HTTP to HTTPS? Join in with
                         <a rel="noopener" target="_blank" href="https://twitter.com/hashtag/movingtoHTTPS">#movingtoHTTPS</a></p>
-                    <p>Looking to contribute? All code is available on <a rel="noopener" target="_blank" href="https://github.com/MovingtoHTTPS">GitHub</a>!</p>
+                    <p>Got any questions on moving? <a rel="noopener" target="_blank" href="https://gitter.im/movingtoHTTPS/Lobby">Ask away on Gitter</a>.</p>
+                    <p>Looking to contribute? All of this content is available on <a rel="noopener" target="_blank" href="https://github.com/MovingtoHTTPS">GitHub</a>!</p>
 
                     <!-- Google Translate will show here -->
                     <div id="google_translate_element"></div>
