--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta name="theme-color" content="#fef7e1">
 
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Noto+Sans:400,400i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/normalize.css@5.0.0/normalize.css">
-    <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/app.css">
 
 </head>
@@ -694,7 +694,7 @@ Header set Strict-Transport-Security "max-age=15768000;"
     </div>
 
     <!-- js imports -->
-    <script src="https://unpkg.com/vue@2.1.10/dist/vue.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js"></script>
     <script src="/js/app.js"></script>
     <script>
     if ('serviceWorker' in navigator) {
