Fixed a couple links now available over https

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             <h3>How will you track changes?</h3>
                             <p>In the event that the migration causes some short term disruptions in traffic and/or search rank, you'll want stats to fall back on and provide visibility of what exactly changed.</p>
                             <p>If you haven't already, setup <a rel="noopener" target="_blank" href="https://www.google.co.uk/analytics/">Google Analytics</a> or a similar service and let it run for at least a week to get a good idea of current traffic &amp; behaviour.</p>
-                            <p>It's also worth making sure you have <a rel="noopener" target="_blank" href="https://www.google.com/webmasters/">Google Search Console</a> (Webmaster tools) setup to track indexed pages and keywords used to find your site along with average position. You may also want to check out <a rel="noopener" target="_blank" href="http://www.bing.com/toolbox/webmaster">Bing's Webmaster Tools</a>.</p>
+                            <p>It's also worth making sure you have <a rel="noopener" target="_blank" href="https://www.google.com/webmasters/">Google Search Console</a> (Webmaster tools) setup to track indexed pages and keywords used to find your site along with average position. You may also want to check out <a rel="noopener" target="_blank" href="https://www.bing.com/toolbox/webmaster">Bing's Webmaster Tools</a>.</p>
                         </li>
                         <li>
                             <h3>Consider making some changes pre migration</h3>
@@ -491,7 +491,7 @@
                             <p>Sometimes a HTTPS version of something may not yet be available, in this case you could download the resource and host it yourself on your newly HTTPS site.</p>
 
                             <p v-if="control == 'max'">
-                                Another option to help the migration process is to use the CSP header of "upgrade-insecure-requests" <a rel="noopener" target="_blank" href="http://caniuse.com/#feat=upgradeinsecurerequests">(Browser support is fairly good and improving)</a>. You can <a rel="noopener" target="_blank" href="https://developers.google.com/web/fundamentals/security/prevent-mixed-content/fixing-mixed-content#upgrading_insecure_requests">read more about this here</a>.
+                                Another option to help the migration process is to use the CSP header of "upgrade-insecure-requests" <a rel="noopener" target="_blank" href="https://caniuse.com/#feat=upgradeinsecurerequests">(Browser support is fairly good and improving)</a>. You can <a rel="noopener" target="_blank" href="https://developers.google.com/web/fundamentals/security/prevent-mixed-content/fixing-mixed-content#upgrading_insecure_requests">read more about this here</a>.
                                 This is probably the nicest way to do it, but requires the resource actually have a HTTPS version available, so worth checking or reporting these issues too.
                             </p>
                             <p v-if="control == 'max'">
