--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                                         <li><a rel="noopener" target="_blank" href="https://httpschecker.net/guides/https-checker">HTTPS Checker</a> is a desktop app (available on Windows, Mac OS X &amp; Ubuntu Linux) to crawl a site for mixed content and related issues.</li>
                                         <li v-if="control != 'min'"><a rel="noopener" target="_blank" href="https://github.com/bramus/mixed-content-scan">Mixed Content Scan</a> by Bramus is a command line php script that will crawl a given site for mixed content issues.</li>
                                         <li><a rel="noopener" target="_blank" href="https://www.jitbit.com/sslcheck/">SSL Check</a> by JitBit offers a quick online tool to find mixed content <em>- though is limited to 200 crawled URLs</em>.</li>
+                                        <li><a rel="noopener" target="_blank" href="https://www.missingpadlock.com">Missing Padlock</a> is a free tool that crawls a site looking for mixed content issues. It can also be run against HTTP sites to identify potential mixed content issues before transitioning a site to HTTPS.</li>
                                     </ul>
                                 </li>
                                 <li v-if="hosting == 'cloudflare'">
