--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ Header set Strict-Transport-Security "max-age=15768000;"
 
     <!-- js imports -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="/js/app.js?v=2"></script>
     <script>
     if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
