--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     </p>
 
                     <!-- if github, it's easiest to use Cloudflare -->
-                    <p v-if="platform=='github'">For GitHub Pages with custom domains, it's easiest to use Cloudflare to handle SSL. It's free &amp; simple to setup. <a rel="noopener" target="_blank" href="https://hackernoon.com/set-up-ssl-on-github-pages-with-custom-domains-for-free-a576bdf51bc">More info here</a>, then follow the rest of this guide for further setup.
-                        <br>However if you don't use custom domains, <a rel="noopener" target="_blank" href="https://help.github.com/articles/securing-your-github-pages-site-with-https/">GitHub has a guide for this here</a>.</p>
+                    <p v-if="platform=='github'">For GitHub Pages with custom domains, you can now use HTTPS either via GitHub (<a rel="noopener" target="_blank" href="https://blog.github.com/2018-05-01-github-pages-custom-domains-https/">read more here</a>) or you can use Cloudflare to proxy the HTTPS. (<a rel="noopener" target="_blank" href="https://hackernoon.com/set-up-ssl-on-github-pages-with-custom-domains-for-free-a576bdf51bc">read more here</a>). Once setup follow the rest of this guide for further setup.
+                        <br>Also if you don't use custom domains, <a rel="noopener" target="_blank" href="https://help.github.com/articles/securing-your-github-pages-site-with-https/">GitHub has a guide for this here</a>.</p>
 
                     <!-- Outline -->
                     <a class="toggle-section print-hidden" @click="showArea.outline = !showArea.outline">[Toggle]</a>
