--- a/index.html
+++ b/index.html
@@ -752,29 +752,16 @@ Header set Strict-Transport-Security "max-age=15768000;"
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }).catch(function(err) {
             console.log('ServiceWorker registration failed: ', err);
-            window.ga('send', 'event', 'sw error', 'ServiceWorker registration failed', err);
         });
     });
     }
-    </script>
-
-    <!-- Google Analytics -->
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-90554746-1', 'auto');
-    ga('send', 'pageview');
     </script>
 
     <!-- Google Translate -->
     <script>
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({
-            pageLanguage: 'en',
-            gaTrack: true,
-            gaId: 'UA-90554746-1'
+            pageLanguage: 'en'
         }, 'google_translate_element');
     }
     </script>
