fix: Further removal of EV cert reference in URL bar
ref https://github.com/MovingToHTTPS/movingtohttps.com/issues/6

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                             <p v-if="hosting == 'cloudflare'">With Cloudflare, you get free DV certificates, however they do not allow use of custom certificates unless you use their Business ($200 a month) plan.</p>
 
-                            <p>For most sites, DV certificates are exactly what you're looking for. But it's worth considering EV certificates as they show the organization in the URL bar.</p>
+                            <p>For most sites, DV certificates are exactly what you're looking for.</p>
                             <p>Another consideration is do you need this certificate for a single domain/subdomain or for multiple. There are single domain, multi domain and wildcard (all subdomains) certificates available from most SSL providers, though Let's Encrypt &amp; Cloudflare require you setup each subdomain separately.</p>
 
                             <p>If you're just looking to secure your main domain a 1 or 2 DV certificates will work perfectly.
